# iamzero-python

./: .bumpversion.cfg  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: test.yml
.vendor/: get-poetry.py
examples/: iamzero_example.py
iamzero/: __init__.py  client.py  config.py  event.py  identity.py  logging.py  publisher.py  test_config.py
iamzero/instrumentation/: __init__.py  botocore.py
