[tool.poetry]
name = "iamzero"
version = "0.0.5" 
description = "iam-zero least-privilege instrumentation client for Python"
readme = "README.md"
homepage = "https://iamzero.dev"
documentation = "https://iamzero.dev/docs/getting-started"
authors = ["Common Fate <hello@commonfate.io>"]
license = "Apache License 2.0"
classifiers = [
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.25.1"
wrapt = "^1.12.1"
statsd = "^3.3.0"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
boto3 = "^1.17.62"
botocore = "^1.20.62"
pytest = "^6.2.3"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"